<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_tencv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/tenCV" />

        <EditText
            android:id="@+id/et_tencv"
            android:paddingLeft="10dp"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:hint="@string/ten" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_name_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:textColor="@color/purple_200"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/date"/>

        <EditText
            android:id="@+id/et_date"
            android:paddingLeft="10dp"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/dd_mm_yy"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_place"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/place"/>

        <EditText
            android:id="@+id/et_place"
            android:paddingLeft="10dp"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/place"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_thanhtien"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/thanhtien"/>

        <EditText
            android:id="@+id/et_thanhtien"
            android:paddingLeft="10dp"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/vnd"/>

    </LinearLayout>

</LinearLayout>